cmake_minimum_required(VERSION 3.13)
project(LeetCode_C_plusplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_C_plusplus main.cpp LeetCode3.h LeetCode7.h LeetCode5.h LeetCode9.h LeetCode27.h LeetCode4.h LeetCode70.h LeetCode29.h LeetCode33.h LeetCode34.h LeetCode35.h LeetCode50.h LeetCode69.h LeetCode74.h LeetCode81.h LeetCode16.h LeetCode19.h LeetCode26.h LeetCode28.h)