cmake_minimum_required(VERSION 3.13)
project(LeetCode_C_plusplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_C_plusplus main.cpp LeetCode3.h LeetCode7.h LeetCode5.h LeetCode9.h LeetCode27.h LeetCode4.h LeetCode70.h LeetCode29.h LeetCode33.h LeetCode34.h LeetCode35.h LeetCode50.h LeetCode69.h LeetCode74.h LeetCode81.h LeetCode16.h LeetCode19.h LeetCode26.h LeetCode28.h LeetCode78.h LeetCode100.h LeetCode10.h LeetCode53.h LeetCode122.h LeetCode134.h LeetCode8.h LeetCode31.h LeetCode1.h LeetCode2.h LeetCode6.h LeetCode55.h LeetCode45.h LeetCode135.h LeetCode12.h LeetCode17.h LeetCode22.h LeetCode39.h LeetCode40.h LeetCode46.h LeetCode62.h LeetCode63.h LeetCode64.h LeetCode416.h LeetCode91.h LeetCode96.h LeetCode21.h LeetCode24.h LeetCode23.h)